--- a/GenSys/Views/DeviceMana/Index.cshtml
+++ b/GenSys/Views/DeviceMana/Index.cshtml
@@ -159,7 +159,7 @@
         </div>
 
         <button type="submit" class="btn btn-default">提交</button>
-        <button id="button" class="btn btn-default">刷新</button>
+        <button id="button" type="button" class="btn btn-default">刷新</button>
     </div>
 }
 
